--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wasm Snake</title>
+    <style>
+        body { margin: 0; }
+        canvas {
+            width: 300px;
+            max-width: 100vw;
+        }
+    </style>
 </head>
 <body>
     <script src="index.js"></script>
