--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </style>
 </head>
 <body>
+    <h2>WebAssembly Snake</h2>
+    <p>(use arrow keys on keyboard to control)</p>
     <script src="index.js"></script>
 </body>
 </html>
